fix alignment

--- a/src/styles/page-home.scss
+++ b/src/styles/page-home.scss
@@ -18,9 +18,6 @@
 }
 
 .message > .inner {
-		@include mq($until: md) {
-			width: 90%;
-		}
 		@include mq($from: lg) {
 			width: 100%;
 		}	
